--- a/Modul_1/index.html
+++ b/Modul_1/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Resep Udang goreng tepung</h1>
 	<img src="udangtepung.jpg">
-	<p>Udang goreng tepung merupakan makanan yang cukup sering dijumpai sebagai camilan favorit keluarga. udang goreng tepung yang memiliki rasa enak, serta gurih ini memiliki tekstur luar yang krispi sehingga menggugah selera masyarakat. Biasanya meski di luarnya renyah dan krispy, rasa pisang di dalamya lembut dan memanjakan lidah.</p>
+	<p>Udang goreng tepung merupakan makanan yang cukup sering dijumpai sebagai camilan favorit keluarga.</p>
 	<h2>Bahan:</h2>
 	<ul>
 		<li>300 gram udang segar (kupas kulitnya)</li>
